--- a/index.html
+++ b/index.html
@@ -167,7 +167,29 @@
 
         </ul>
     </div>
-    <script src="./main.js "></script>
+    <script>
+        window.onload = function() {
+    // location.replace(location.href)
+
+    function openCustomFullscreen(e) {
+        e.parentNode.id = "fullscreenContainer"
+console.log(e)
+    }
+
+    function closeCustomFullscreen(e) {
+
+        if (e.parentNode.id = fullscreenContainer) {
+            e.parentNode.id = ""
+
+        } else {
+            // const clickId = e.parentNode.id
+        }
+
+    }
+
+}
+            </script>
 </body>
+
 
 </html>
