--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     </div>
     <script>
         window.onload = function() {
+            console.log(1)
     // location.replace(location.href)
 
     function openCustomFullscreen(e) {
@@ -193,3 +194,4 @@ console.log(e)
 
 
 </html>
+
