--- a/index.html
+++ b/index.html
@@ -167,31 +167,10 @@
 
         </ul>
     </div>
-    <script>
-        window.onload = function() {
-            console.log(1)
-    // location.replace(location.href)
-
-    function openCustomFullscreen(e) {
-        e.parentNode.id = "fullscreenContainer"
-console.log(e)
-    }
-
-    function closeCustomFullscreen(e) {
-
-        if (e.parentNode.id = fullscreenContainer) {
-            e.parentNode.id = ""
-
-        } else {
-            // const clickId = e.parentNode.id
-        }
-
-    }
-
-}
-            </script>
+    <script src="main.js"></script>
 </body>
 
 
 </html>
+
 
