--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <ul>
             <li><a href="./index.html " class="index ">首页</a></li>
             <li><a href="./pages/myresume.html " class="myresume ">个人简历</a></li>
-            <li><a href="./dowload/zaz_resume.pdf " class="resumeDowload " download="zaz_resume.pdf "><span class="iconfont icon-xiazai "></span>下载简历</a></li>
+            <li><a href="./dowload/zqz_resume.png " class="resumeDowload " download="zqz_resume.png "><span class="iconfont icon-xiazai "></span>下载简历</a></li>
         </ul>
     </div>
     </div>
     <!-- 简历区域 -->
-    <div class="resume wrapper "><img src="./images/resume3.png " alt=" "></div>
+    <div class="resume wrapper "><img src="./images/resume.png " alt=" "></div>
     <!-- 工作所得 -->
     <div class="results wrapper ">
         <div class="header ">
@@ -169,6 +169,7 @@
 
 
 </html>
+
 
 
 
