--- a/pages/myresume.html
+++ b/pages/myresume.html
@@ -31,10 +31,11 @@
             </ul>
         </div>
         <div class="resume_pic">
-            <img src="../images/resume3.png " alt=" ">
+            <img src="../images/zqz_resume.png " alt=" ">
         </div>
     </div>
     <script src="../js/myresume.js"></script>
 </body>
+
 
 </html>
