--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     </div>
     <!-- 简历区域 -->
-    <div class="resume wrapper "><img src="./images/resume.png " alt=" "></div>
+    <div class="resume wrapper "><img src="./images/intro.png " alt=" "></div>
     <!-- 工作所得 -->
     <div class="results wrapper ">
         <div class="header ">
@@ -169,6 +169,7 @@
 
 
 </html>
+
 
 
 
