--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <img src="./images/vlog2.png " alt=" ">
                  
                 </div>
-                <span class="right ">学习《信息系统项目管理》</span>
+                <span class="right ">学习《中级经济》</span>
             </li>
             <li>
                 <span class="left ">学习《中级经济-专业实务》</span>
@@ -169,6 +169,7 @@
 
 
 </html>
+
 
 
 
