--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li><a href="./index.html " class="index ">首页</a></li>
             <li><a href="./pages/myresume.html " class="myresume ">个人简历</a></li>
-            <li><a href="./dowload/zqz_resume.png " class="resumeDowload " download="zqz_resume.png "><span class="iconfont icon-xiazai "></span>下载简历</a></li>
+            <li><a href="./images/zqz_resume.png " class="resumeDowload " download="zqz_resume.png "><span class="iconfont icon-xiazai "></span>下载简历</a></li>
         </ul>
     </div>
     </div>
@@ -169,6 +169,7 @@
 
 
 </html>
+
 
 
 
