--- a/pages/myresume.html
+++ b/pages/myresume.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="resume_pic">
-            <img src="../images/zqz_resume.png " alt=" ">
+            <img src="../images/zqz_resume.jpg " alt=" ">
         </div>
     </div>
     <script src="../js/myresume.js"></script>
@@ -39,3 +39,4 @@
 
 
 </html>
+
