--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </li>
             <li>
                 <p>加我微信:</p>
-                <img src="./images/wechart.png " alt=" ">
+                <img src="./images/wechart.jpg " alt=" ">
             </li>
 
         </ul>
@@ -169,6 +169,7 @@
 
 
 </html>
+
 
 
 
